css/style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header h1 {
  letter-spacing: 0.6vw;
}

header h1,
a,
button {
  font-family: "Times New Roman", Times, serif;
  text-decoration: none;
}

footer {
  background-color: #cbc0d3;
  text-align: center;
}

.sidepanel {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #ae9ab3e5;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 6vw;
}

.sidepanel a {
  padding: 1rem 0 1rem 3rem;
  text-decoration: none;
  font-size: 1.3rem;
  font-family: "Roboto", sans-serif;
  color: black;
  letter-spacing: 0.1vw;
  display: block;
  transition: 0.3s;
}

.sidepanel .closebtn {
  position: absolute;
  top: 2vw;
  right: 2vw;
  font-size: 1.4rem;
  margin-left: 50px;
}

/* where the products are shown */
.container,
.shoppingCart-products {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.products {
  max-width: 30vw;
  padding: 2vw;
  letter-spacing: 0.1vw;
}

/* costumize the add to cart button */
.addCart-btn {
  text-decoration: none;
  border: none;
  background-color: #cbc0d3;
  border-radius: 0.6vw;
  cursor: pointer;
}

.addCart-btn:hover {
  background-color: #e1dbe6;
}

.menuButton {
  text-decoration: none;
  border: none;
}

#title {
  text-align: center;
  border-style: solid;
  border-color: #cbc0d3;
}

#title p {
  font-style: italic;
}

/* --------- CART ----------- */

.product-header {
  display: flex;
  flex-direction: row;
  border-bottom: 0.2vw solid #cbc0d3;
}

/* --------- MOBILE ----------- */

@media (max-width: 700px) {
  header,
  footer {
    padding: 6vw;
  }

  header h1 {
    font-size: 2.6rem;
  }

  .menuButton {
    font-size: 1.2rem;
    background-color: #cbc0d3;
  }

  .sidepanel a {
    padding: 2.5rem 0rem 1rem 2rem;
  }

  .sidepanel .closebtn {
    position: absolute;
    top: 1vw;
    right: 10vw;
    font-size: 1.4rem;
    margin-left: 50px;
  }

  .products h4 {
    margin: 2vw 0vw 0vw 2vw;
  }

  .products p {
    margin: 0vw 0vw 2vw 2vw;
  }

  .description {
    display: none;
  }

  .addCart-btn {
    margin: 2vw 0vw 0vw 2vw;
    padding: 2vw;
  }

  #menu-desktop {
    display: none;
  }

  #mobile-cart {
    font-size: 1.2rem;
  }

  #menu-mobile {
    display: flex;
    justify-content: space-around;
    margin-top: 0;
    margin-bottom: 6vh;
    padding: 4vw;
    font-size: 1.2rem;
    background-color: #cbc0d3;
  }

  #menu-mobile a,
  button {
    color: #43156e;
  }

  #title {
    margin: 4vw 10vw 4vw 10vw;
    padding: 6vw;
    text-align: center;
    letter-spacing: 0.8vw;
    line-height: 8vw;
    border-style: solid;
    border-color: #cbc0d3;
  }

  /* --------- CART ----------- */

  .shoppingCart {
    margin: 2vw;
    border-style: solid;
  }
}

/* --------- DESKTOP  ----------- */
@media (min-width: 701px) {
  header {
    padding: 3vw;
  }

  header h1 {
    padding-left: 4vw;
    font-size: 3.5vw;
  }

  footer {
    padding: 4vw;
  }

  .menuButton:hover {
    color: #cbc0d3;
  }

  .container {
    margin: 0 5vw 2vw 5vw;
  }

  .products h4,
  p,
  button {
    margin-top: 1vw;
  }

  .products h4 {
    font-size: 1.6vw;
  }

  .product-info {
    display: grid;
    grid-template-columns: 16vw;
    grid-template-rows: auto auto auto 8vh;
  }

  #menu-mobile,
  #mobile-cart {
    display: none;
  }

  .menuButton,
  #menu-desktop a {
    font-size: 1.2rem;
    margin-right: 4vw;
    letter-spacing: 0.2vw;
    cursor: pointer;
    background-color: white;
  }

  #menu-mobile a,
  button {
    color: #43156e;
  }

  #menu-desktop i {
    font-size: 1.6rem;
    color: #b09fbc;
  }

  #menu-desktop a:hover {
    color: #cbc0d3;
  }

  #title {
    margin: 2vw 25vw 4vw 25vw;
    padding: 3vw;
    letter-spacing: 0.8vw;
    line-height: 3vw;
  }

  /* --------- CART ----------- */

  .shoppingCart {
    margin: 0 14vw 10vw 14vw;
  }

  .shoppingCart-products {
    align-items: center;
    border-bottom: 0.2vw solid #cbc0d3;
  }

  .shoppingCart-products img {
    max-width: 10vw;
    margin-left: 1vw;
  }

  .shoppingCart-products ion-icon {
    font-size: 1.5rem;
    cursor: pointer;
  }

  .product {
    width: 45%;
    display: flex;
    align-items: center;
  }

  .quantity {
    width: 15%;
    display: flex;
    justify-content: space-around;
    margin-left: 6vw;
    margin-right: 3vw;
  }

  .add-remove {
    color: #cbc0d3;
  }

  .price {
    width: 10%;
    text-align: center;
  }

  .total {
    width: 15%;
    text-align: end;
  }

  .totalPriceContainer {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    margin-right: 1vw;
    padding: 3vw 0 1vw 0;
    font-size: 1.2rem;
  }

  .totalPriceTitle {
    width: 20%;
  }

  #orderSummary {
    margin-bottom: 2vh;
  }

  #product-title {
    margin-left: 1vw;
    width: 50%;
  }

  #quantity-title {
    width: 25%;
    text-align: center;
  }

  #price-title {
    width: 10%;
    text-align: center;
  }

  #total-title {
    width: 15%;
    text-align: end;
    margin-right: 1vw;
  }
}

